base64 encoder decoder ui update

--- a/src/renderer-process/tools/base64-encoder-decoder/ui.html
+++ b/src/renderer-process/tools/base64-encoder-decoder/ui.html
@@ -1,6 +1,23 @@
-<nav class="navbar navbar-expand-sm navbar-light bg-light sticky-top mb-1">
+<nav class="navbar navbar-expand-sm navbar-light bg-light mb-1">
   <div class="container-fluid">
     <span class="pe-3">Base64 Encoder Decoder</span>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#base64-encoder-decoder-navbar"
+            aria-controls="base64-encoder-decoder-navbar" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="base64-encoder-decoder-navbar">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" href="#" id="increase-font-input-base64-encoder-decoder-btn"><i title="Increase font size" class="bi-zoom-in"></i></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" id="decrease-font-input-base64-encoder-decoder-btn"><i title="Decrease font size" class="bi-zoom-out"></i></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" id="reset-font-input-base64-encoder-decoder-btn"><i title="Reset font size" class="bi-arrow-counterclockwise"></i></a>
+        </li>
+      </ul>
+    </div>
   </div>
 </nav>
 
