ui upate xml formatter

--- a/src/renderer-process/tools/epoch/ui.html
+++ b/src/renderer-process/tools/epoch/ui.html
@@ -6,7 +6,7 @@
 
 <div class="container-fluid">
   <div class="row">
-    <div class="col-12">
+    <div class="col-12 p-0">
       <div class="form-group input-group-lg">
         <label for="epoch-input" class="form-label">Enter epoch time</label>
         <input class="form-control" id="epoch-input" type="number" min="0" step="1">
@@ -31,7 +31,7 @@
   </div>
 
   <div class="row">
-    <div class="col-12">
+    <div class="col-12 p-0">
       <div id="time-table">
         <table class="table">
           <tbody>
