--- a/src/renderer-process/tools/xml-formatter/ui.html
+++ b/src/renderer-process/tools/xml-formatter/ui.html
@@ -8,84 +8,19 @@
     <div class="collapse navbar-collapse" id="xml-formatter-navbar">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="#" id="xml-formatter-format-input-btn"><i title="Pretty" class="bi-emoji-smile"></i></a>
+          <a class="nav-link" href="#" id="increase-font-input-xml-formatter-btn"><i title="Increase font size" class="bi-zoom-in"></i></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" id="xml-formatter-compact-input-btn"><i title="Compact" class="bi-justify-left"></i></a>
+          <a class="nav-link" href="#" id="decrease-font-input-xml-formatter-btn"><i title="Decrease font size" class="bi-zoom-out"></i></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" id="xml-formatter-toggle-wrap-input-btn" data-wrap="no"><i title="Wrap" class="bi-body-text"></i></a>
+          <a class="nav-link" href="#" id="reset-font-input-xml-formatter-btn"><i title="Reset font size" class="bi-arrow-counterclockwise"></i></a>
         </li>
       </ul>
     </div>
   </div>
 </nav>
 
-<ul class="nav nav-tabs" id="xmlFormatterTab" role="tablist">
-  <li class="nav-item" role="presentation">
-    <button class="nav-link sanduk-xml-formatter-tab active" data-tabid="1" id="xml-formatter-tab-1" data-bs-toggle="tab" data-bs-target="#xml-formatter-tab-1-content" type="button" role="tab" aria-controls="tab-1" aria-selected="true">Tab 1</button>
-  </li>
-  <li class="nav-item" role="presentation">
-    <button class="nav-link sanduk-xml-formatter-tab" data-tabid="2" id="xml-formatter-tab-2" data-bs-toggle="tab" data-bs-target="#xml-formatter-tab-2-content" type="button" role="tab" aria-controls="tab-2" aria-selected="false">Tab 2</button>
-  </li>
-  <li class="nav-item" role="presentation">
-    <button class="nav-link sanduk-xml-formatter-tab" data-tabid="3" id="xml-formatter-tab-3" data-bs-toggle="tab" data-bs-target="#xml-formatter-tab-3-content" type="button" role="tab" aria-controls="tab-3" aria-selected="false">Tab 3</button>
-  </li>
-  <li class="nav-item" role="presentation">
-    <button class="nav-link sanduk-xml-formatter-tab" data-tabid="4" id="xml-formatter-tab-4" data-bs-toggle="tab" data-bs-target="#xml-formatter-tab-4-content" type="button" role="tab" aria-controls="tab-4" aria-selected="false">Tab 4</button>
-  </li>
-  <li class="nav-item" role="presentation">
-    <button class="nav-link sanduk-xml-formatter-tab" data-tabid="5" id="xml-formatter-tab-5" data-bs-toggle="tab" data-bs-target="#xml-formatter-tab-5-content" type="button" role="tab" aria-controls="tab-5" aria-selected="false">Tab 5</button>
-  </li>
-  <li class="nav-item" role="presentation">
-    <button class="nav-link sanduk-xml-formatter-tab" data-tabid="6" id="xml-formatter-tab-6" data-bs-toggle="tab" data-bs-target="#xml-formatter-tab-6-content" type="button" role="tab" aria-controls="tab-6" aria-selected="false">Tab 6</button>
-  </li>
-  <li class="nav-item" role="presentation">
-    <button class="nav-link sanduk-xml-formatter-tab" data-tabid="7" id="xml-formatter-tab-7" data-bs-toggle="tab" data-bs-target="#xml-formatter-tab-7-content" type="button" role="tab" aria-controls="tab-7" aria-selected="false">Tab 7</button>
-  </li>
-</ul>
-<div class="tab-content" id="xmlFormatterTabContent">
-  <div class="tab-pane show active" id="xml-formatter-tab-1-content" role="tabpanel" aria-labelledby="tab-1">
-    <pre class="form-control"
-         id="xml-formatter-input-tab-1"
-         style="height: calc(100vh - 200px); font-size: 16px; margin-bottom: 0"></pre>
-    <div id="xml-formatter-input-tab-1-footer" class="bg-light p-1 font-monospace">Ln: 1 Col: 1</div>
-  </div>
-  <div class="tab-pane" id="xml-formatter-tab-2-content" role="tabpanel" aria-labelledby="tab-2">
-    <pre class="form-control"
-         id="xml-formatter-input-tab-2"
-         style="height: calc(100vh - 200px); font-size: 16px; margin-bottom: 0"></pre>
-    <div id="xml-formatter-input-tab-2-footer" class="bg-light p-1 font-monospace">Ln: 1 Col: 1</div>
-  </div>
-  <div class="tab-pane" id="xml-formatter-tab-3-content" role="tabpanel" aria-labelledby="tab-3">
-    <pre class="form-control"
-         id="xml-formatter-input-tab-3"
-         style="height: calc(100vh - 200px); font-size: 16px; margin-bottom: 0"></pre>
-    <div id="xml-formatter-input-tab-3-footer" class="bg-light p-1 font-monospace">Ln: 1 Col: 1</div>
-  </div>
-  <div class="tab-pane" id="xml-formatter-tab-4-content" role="tabpanel" aria-labelledby="tab-4">
-    <pre class="form-control"
-         id="xml-formatter-input-tab-4"
-         style="height: calc(100vh - 200px); font-size: 16px; margin-bottom: 0"></pre>
-    <div id="xml-formatter-input-tab-4-footer" class="bg-light p-1 font-monospace">Ln: 1 Col: 1</div>
-  </div>
-  <div class="tab-pane" id="xml-formatter-tab-5-content" role="tabpanel" aria-labelledby="tab-5">
-    <pre class="form-control"
-         id="xml-formatter-input-tab-5"
-         style="height: calc(100vh - 200px); font-size: 16px; margin-bottom: 0"></pre>
-    <div id="xml-formatter-input-tab-5-footer" class="bg-light p-1 font-monospace">Ln: 1 Col: 1</div>
-  </div>
-  <div class="tab-pane" id="xml-formatter-tab-6-content" role="tabpanel" aria-labelledby="tab-6">
-    <pre class="form-control"
-         id="xml-formatter-input-tab-6"
-         style="height: calc(100vh - 200px); font-size: 16px; margin-bottom: 0"></pre>
-    <div id="xml-formatter-input-tab-6-footer" class="bg-light p-1 font-monospace">Ln: 1 Col: 1</div>
-  </div>
-  <div class="tab-pane" id="xml-formatter-tab-7-content" role="tabpanel" aria-labelledby="tab-7">
-    <pre class="form-control"
-         id="xml-formatter-input-tab-7"
-         style="height: calc(100vh - 200px); font-size: 16px; margin-bottom: 0"></pre>
-    <div id="xml-formatter-input-tab-7-footer" class="bg-light p-1 font-monospace">Ln: 1 Col: 1</div>
-  </div>
-</div>
+<ul class="nav nav-tabs" id="xmlFormatterTab" role="tablist"></ul>
+<div class="tab-content" id="xmlFormatterTabContent"></div>
 <div id="xml-formatter-input-message"></div>
