--- a/src/renderer-process/tools/jwt-decoder/ui.html
+++ b/src/renderer-process/tools/jwt-decoder/ui.html
@@ -24,7 +24,7 @@
 
 <div class="container-fluid">
   <div class="row">
-    <div class="col-12">
+    <div class="col-12 p-0">
       <div class="form-group">
         <label for="jwt-decoder-input" class="form-label">JWT</label>
         <pre class="form-control"
@@ -36,7 +36,7 @@
   </div>
 
   <div class="row">
-    <div class="col-12">
+    <div class="col-12 p-0">
       <div class="btn-group my-3" role="group" aria-label="Basic example">
         <button type="button" id="jwt-decoder-decode-btn" class="btn btn-outline-primary">Decode</button>
         <button type="button" id="jwt-deocder-clear-btn" class="btn btn-outline-primary">Clear</button>
@@ -45,7 +45,7 @@
   </div>
 
   <div class="row">
-    <div class="col-md-12 col-lg-6">
+    <div class="col-md-12 col-lg-6 p-0">
       <div class="form-group">
         <label for="jwt-decoder-decoded-header" class="form-label">Header</label>
         <pre class="form-control"
@@ -54,7 +54,7 @@
       </div>
     </div>
 
-    <div class="col-md-12 col-lg-6">
+    <div class="col-md-12 col-lg-6 p-0">
       <div class="form-group">
         <label for="jwt-decoder-decoded-payload" class="form-label">Payload</label>
         <pre class="form-control"
