--- a/src/renderer-process/tools/json-formatter/ui.html
+++ b/src/renderer-process/tools/json-formatter/ui.html
@@ -7,6 +7,17 @@
     </button>
     <div class="collapse navbar-collapse" id="json-formatter-navbar">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle my-dropdown-toggle-without-arrow" href="#" id="json-formatter-file-menu-dropdown" data-bs-toggle="dropdown" aria-expanded="false">
+            File
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="json-formatter-file-menu-dropdown">
+            <li><a class="dropdown-item" href="#" id="json-formatter-file-menu-dropdown-open-btn">Open</a></li>
+            <li><a class="dropdown-item" href="#" id="json-formatter-file-menu-dropdown-save-btn">Save</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#" id="json-formatter-file-menu-dropdown-close-btn">Close File</a></li>
+          </ul>
+        </li>
         <li class="nav-item">
           <a class="nav-link" href="#" id="increase-font-input-json-formatter-btn"><i title="Increase font size" class="bi-zoom-in"></i></a>
         </li>
