--- a/src/renderer-process/tools/uuid/ui.html
+++ b/src/renderer-process/tools/uuid/ui.html
@@ -31,7 +31,7 @@
 
         <div class="col-12 p-0">
           <label for="uuid-v4-history" class="form-label">History</label>
-          <div id="uuid-v4-history"></div>
+          <div id="uuid-v4-history" style="max-height: 200px; overflow-y: scroll;"></div>
         </div>
       </div>
     </div>
@@ -68,7 +68,7 @@
 
         <div class="col-12 p-0">
           <label for="uuid-v5-history" class="form-label">History</label>
-          <div id="uuid-v5-history"></div>
+          <div id="uuid-v5-history" style="max-height: 200px; overflow-y: scroll;"></div>
         </div>
       </div>
     </div>
