--- a/src/static/app.html
+++ b/src/static/app.html
@@ -13,7 +13,7 @@
   <div class="row">
     <div class="col px-0">
       <div class="d-flex align-items-start">
-        <div class="nav flex-column nav-pills me-3-dont-use" id="v-pills-tab" role="tablist"
+        <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist"
              aria-orientation="vertical">
           <button class="nav-link" id="v-pills-base64-encoder-decoder-tab" data-bs-toggle="pill"
                   data-bs-target="#v-pills-base64-encoder-decoder" type="button" role="tab"
