--- a/src/static/app.html
+++ b/src/static/app.html
@@ -54,13 +54,14 @@
             <div class="container-fluid">
               <div class="row">
                 <div class="col m-5 p-5 text-center">
-                <span class="mx-auto" style="width: 128px;
-                  background-image: url(../../resources/app-icons/stable/png/128.png);
-                  height: 128px;
-                  display: block;
-                  background-position: center;
-                  background-repeat: no-repeat;"></span>
+                  <span class="mx-auto" style="width: 128px;
+                    background-image: url(../../resources/app-icons/stable/png/128.png);
+                    height: 128px;
+                    display: block;
+                    background-position: center;
+                    background-repeat: no-repeat;"></span>
                   <h1 class="display-6">sanduk</h1>
+                  <p id="sanduk-project-version"></p>
                 </div>
               </div>
             </div>
