--- a/src/renderer-process/tools/markdown/ui.html
+++ b/src/renderer-process/tools/markdown/ui.html
@@ -54,7 +54,7 @@
          data-viewPreviewOnly="col-12 p-0">
       <iframe id="markdown-iframe-output"
            class="github-markdown-body"
-           style="border: 1px solid #eee;
+           style="border: 1px solid #ced4da;
            overflow: scroll;
            padding: 5px;
            width: 100%;
