--- a/src/renderer-process/tools/epoch/ui.html
+++ b/src/renderer-process/tools/epoch/ui.html
@@ -49,7 +49,7 @@
             <td class="text-right">Epoch</td>
             <td id="current-time-epoch"></td>
             <td>
-              <span id="copy-current-time-epoch-btn" style="cursor: pointer;">
+              <span id="copy-current-time-epoch-btn">
                 <i title="Copy" class="bi-clipboard"></i>
               </span>
             </td>
