--- a/src/static/app.html
+++ b/src/static/app.html
@@ -19,6 +19,10 @@
                   data-bs-target="#v-pills-base64-encoder-decoder" type="button" role="tab"
                   aria-controls="v-pills-base64-encoder-decoder" aria-selected="true">Base64 Encoder Decoder
           </button>
+          <button class="nav-link text-start" id="v-pills-csv-to-json-tab" data-bs-toggle="pill"
+                  data-bs-target="#v-pills-csv-to-json" type="button" role="tab"
+                  aria-controls="v-pills-csv-to-json" aria-selected="true">CSV to JSON
+          </button>
           <button class="nav-link text-start" id="v-pills-epoch-tab" data-bs-toggle="pill" data-bs-target="#v-pills-epoch"
                   type="button" role="tab" aria-controls="v-pills-epoch" aria-selected="false">Epoch
           </button>
@@ -67,6 +71,9 @@
           </div>
           <div class="tab-pane" id="v-pills-base64-encoder-decoder" role="tabpanel"
                aria-labelledby="v-pills-base64-encoder-decoder-tab">base64 encoder decoder
+          </div>
+          <div class="tab-pane" id="v-pills-csv-to-json" role="tabpanel"
+               aria-labelledby="v-pills-csv-to-json-tab">csv to json
           </div>
           <div class="tab-pane" id="v-pills-epoch" role="tabpanel" aria-labelledby="v-pills-epoch-tab">epoch</div>
           <div class="tab-pane" id="v-pills-json-formatter" role="tabpanel"
