sidebar menu item size

--- a/src/static/app.html
+++ b/src/static/app.html
@@ -15,44 +15,44 @@
       <div class="d-flex align-items-start">
         <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist"
              aria-orientation="vertical">
-          <button class="nav-link text-start" id="v-pills-base64-encoder-decoder-tab" data-bs-toggle="pill"
+          <button class="nav-link text-start sanduk-sidebar-menu-item" id="v-pills-base64-encoder-decoder-tab" data-bs-toggle="pill"
                   data-bs-target="#v-pills-base64-encoder-decoder" type="button" role="tab"
                   aria-controls="v-pills-base64-encoder-decoder" aria-selected="true">Base64 Encoder Decoder
           </button>
-          <button class="nav-link text-start" id="v-pills-canvas-tab" data-bs-toggle="pill"
+          <button class="nav-link text-start sanduk-sidebar-menu-item" id="v-pills-canvas-tab" data-bs-toggle="pill"
                   data-bs-target="#v-pills-canvas" type="button" role="tab"
                   aria-controls="v-pills-canvas" aria-selected="true">Canvas
           </button>
-          <button class="nav-link text-start" id="v-pills-csv-to-json-tab" data-bs-toggle="pill"
+          <button class="nav-link text-start sanduk-sidebar-menu-item" id="v-pills-csv-to-json-tab" data-bs-toggle="pill"
                   data-bs-target="#v-pills-csv-to-json" type="button" role="tab"
                   aria-controls="v-pills-csv-to-json" aria-selected="true">CSV to JSON
           </button>
-          <button class="nav-link text-start" id="v-pills-editor-tab" data-bs-toggle="pill"
+          <button class="nav-link text-start sanduk-sidebar-menu-item" id="v-pills-editor-tab" data-bs-toggle="pill"
                   data-bs-target="#v-pills-editor" type="button" role="tab" aria-controls="v-pills-editor"
                   aria-selected="false">Editor
           </button>
-          <button class="nav-link text-start" id="v-pills-epoch-tab" data-bs-toggle="pill" data-bs-target="#v-pills-epoch"
+          <button class="nav-link text-start sanduk-sidebar-menu-item" id="v-pills-epoch-tab" data-bs-toggle="pill" data-bs-target="#v-pills-epoch"
                   type="button" role="tab" aria-controls="v-pills-epoch" aria-selected="false">Epoch
           </button>
-          <button class="nav-link text-start" id="v-pills-json-formatter-tab" data-bs-toggle="pill"
+          <button class="nav-link text-start sanduk-sidebar-menu-item" id="v-pills-json-formatter-tab" data-bs-toggle="pill"
                   data-bs-target="#v-pills-json-formatter" type="button" role="tab"
                   aria-controls="v-pills-json-formatter" aria-selected="false">JSON Formatter
           </button>
-          <button class="nav-link text-start" id="v-pills-jwt-decoder-tab" data-bs-toggle="pill"
+          <button class="nav-link text-start sanduk-sidebar-menu-item" id="v-pills-jwt-decoder-tab" data-bs-toggle="pill"
                   data-bs-target="#v-pills-jwt-decoder" type="button" role="tab" aria-controls="v-pills-jwt-decoder"
                   aria-selected="false">JWT Decoder
           </button>
-          <button class="nav-link text-start" id="v-pills-markdown-tab" data-bs-toggle="pill" data-bs-target="#v-pills-markdown"
+          <button class="nav-link text-start sanduk-sidebar-menu-item" id="v-pills-markdown-tab" data-bs-toggle="pill" data-bs-target="#v-pills-markdown"
                   type="button" role="tab" aria-controls="v-pills-markdown" aria-selected="false">Markdown
           </button>
-          <button class="nav-link text-start" id="v-pills-uuid-tab" data-bs-toggle="pill" data-bs-target="#v-pills-uuid"
+          <button class="nav-link text-start sanduk-sidebar-menu-item" id="v-pills-uuid-tab" data-bs-toggle="pill" data-bs-target="#v-pills-uuid"
                   type="button" role="tab" aria-controls="v-pills-uuid" aria-selected="false">UUID
           </button>
-          <button class="nav-link text-start" id="v-pills-xml-formatter-tab" data-bs-toggle="pill"
+          <button class="nav-link text-start sanduk-sidebar-menu-item" id="v-pills-xml-formatter-tab" data-bs-toggle="pill"
                   data-bs-target="#v-pills-xml-formatter" type="button" role="tab" aria-controls="v-pills-xml-formatter"
                   aria-selected="false">XML Formatter
           </button>
-          <button class="nav-link text-start" id="v-pills-xml-to-json-tab" data-bs-toggle="pill"
+          <button class="nav-link text-start sanduk-sidebar-menu-item" id="v-pills-xml-to-json-tab" data-bs-toggle="pill"
                   data-bs-target="#v-pills-xml-to-json" type="button" role="tab" aria-controls="v-pills-xml-to-json"
                   aria-selected="false">XML to JSON
           </button>
