wip: compare difference

--- a/src/static/app.html
+++ b/src/static/app.html
@@ -23,6 +23,10 @@
                   data-bs-target="#v-pills-canvas" type="button" role="tab"
                   aria-controls="v-pills-canvas" aria-selected="true">Canvas
           </button>
+          <button class="nav-link text-start sanduk-sidebar-menu-item" id="v-pills-compare-tab" data-bs-toggle="pill"
+                  data-bs-target="#v-pills-compare" type="button" role="tab"
+                  aria-controls="v-pills-compare" aria-selected="true">Compare
+          </button>
           <button class="nav-link text-start sanduk-sidebar-menu-item" id="v-pills-csv-to-json-tab" data-bs-toggle="pill"
                   data-bs-target="#v-pills-csv-to-json" type="button" role="tab"
                   aria-controls="v-pills-csv-to-json" aria-selected="true">CSV to JSON
@@ -78,6 +82,9 @@
           </div>
           <div class="tab-pane" id="v-pills-canvas" role="tabpanel"
                aria-labelledby="v-pills-canvas-tab">canvas
+          </div>
+          <div class="tab-pane" id="v-pills-compare" role="tabpanel"
+               aria-labelledby="v-pills-compare-tab">compare
           </div>
           <div class="tab-pane" id="v-pills-csv-to-json" role="tabpanel"
                aria-labelledby="v-pills-csv-to-json-tab">csv to json
